# dms-rs

./: .travis.yml  Cargo.toml  IDEAS  Makefile  README.md  build.rs
src/: collector.rs  dms_agent.rs  main.rs  messaging.rs  probe.rs  program.rs  scheduler.rs  sender.rs
src/collector/: mod.rs
src/collector/probe/: mod.rs
src/messaging/: data_types.rs  mod.rs  serde.rs
src/messaging/data_types/: message_header.rs  mod.rs  raw_data_point.rs
src/messaging/schema/: raw_data_point.capnp  raw_data_point_capnp.rs
src/producer/: mod.rs
src/producer/probe/: hello_world.rs  mod.rs
src/schema/: raw_data_point_capnp.rs
