[package]
name = "dms-rs"
version = "0.0.1"
authors = ["Jakub Pastuszek <jpastuszek@gmail.com>"]
build = "build.rs"

[build-dependencies]
capnpc = "*"

[dependencies]
clap = "*"
log = "*"
env_logger = "*"
nanomsg = "*"
chrono = "*"
time = "~ 0.1"
capnp = "*"
capnpc = "*"
carboxyl = "0.1.2"
token_scheduler = { path = "../token_scheduler" }

